# ChangeLog for app-arch/gzip
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/gzip/ChangeLog,v 1.68 2006/09/27 14:30:11 taviso Exp $

*gzip-1.3.5-r10 (27 Sep 2006)

  27 Sep 2006; Tavis Ormandy <taviso@gentoo.org>
  +files/gzip-1.3.5-CVE-2006-4334-8.2.patch, +gzip-1.3.5-r10.ebuild:
  Correct unlzh security patch, thanks to Haruhiko Okumura.

  22 Sep 2006; Bryan Østergaard <kloeri@gentoo.org> gzip-1.3.5-r9.ebuild:
  Stable on alpha + ia64, bug 145511.

  21 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  gzip-1.3.5-r9.ebuild:
  hppa stable, bug #145511

  21 Sep 2006; <blubb@gentoo.org> gzip-1.3.5-r9.ebuild:
  stable on amd64

  21 Sep 2006; Jason Wever <weeve@gentoo.org> gzip-1.3.5-r9.ebuild:
  Stable on SPARC wrt security bug #145511.

  20 Sep 2006; Markus Rothe <corsair@gentoo.org> gzip-1.3.5-r9.ebuild:
  Stable on ppc64; bug #145511

  20 Sep 2006; Torsten Veller <tove@gentoo.org> gzip-1.3.5-r9.ebuild:
  Stable on x86 (#145511)

  20 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org> ChangeLog:
  ppc stable, bug #145511

*gzip-1.3.5-r9 (20 Sep 2006)

  20 Sep 2006; Christian Hartmann <ian@gentoo.org>
  +files/gzip-1.3.5-CVE-2006-4334-8.patch, +gzip-1.3.5-r9.ebuild:
  Revbump for bug #145511 - commit approved by DerCorny.

  27 Apr 2006; Alec Warner <antarus@gentoo.org> files/digest-gzip-1.3.5-r8,
  Manifest:
  Fixing duff SHA256 digests: Bug # 131293

  30 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> gzip-1.3.5-r8.ebuild:
  Add ~x86-fbsd keyword.

*gzip-1.3.5-r8 (02 Jul 2005)

  02 Jul 2005; Mike Frysinger <vapier@gentoo.org>
  +files/gzip-1.3.5-huft-build-return-fix.patch, +gzip-1.3.5-r8.ebuild:
  Fix crash on bad input #94584 by Tavis Ormandy.

*gzip-1.3.5-r7 (31 May 2005)

  31 May 2005; Mike Frysinger <vapier@gentoo.org>
  +files/gzip-1.3.5-alpha.patch, +gzip-1.3.5-r7.ebuild:
  Fix segfault on alpha/xorg with a patch from Debian #92232.
