@@ -47,19 +47,18 @@ MD5 17f0be7717f949fc0acd0ef316982cd6 files/gzip-1.3.5-znew-tempfile-2.patch 1931
 RMD160 cdfe696be4d6c5c67ad259a2f0958ec67be670b3 files/gzip-1.3.5-znew-tempfile-2.patch 1931
 SHA256 98cb432fc65ce9e7cbb479c47ca6119d423651254dfa491042b6dd2a7fb6585c files/gzip-1.3.5-znew-tempfile-2.patch 1931
 DIST gzip-1.3.5.tar.gz 331550 RMD160 5011f20441f31838c34b981c325107dd85737ff9 SHA1 843272609b9bff1bdf2770a28d498d6519901e73 SHA256 631820e566353eafc4bdc0d9d8221c26c7ef6b5d10a254783dbe9bcac88caa07
-EBUILD gzip-1.3.5-r10.ebuild 2335 RMD160 dc14090d2cdc67f221d02735c0ba2e0c89e2194e SHA1 8213f0e5aef2b7ed5f86ac367004b1ea4f6987af SHA256 347ce74a4e79f49696db5895e5cfd61f74475ab5052d7bc51a23d2666d19293b
-MD5 36cd681c7b4fe5baf766edd5c636f0a6 gzip-1.3.5-r10.ebuild 2335
-RMD160 dc14090d2cdc67f221d02735c0ba2e0c89e2194e gzip-1.3.5-r10.ebuild 2335
-SHA256 347ce74a4e79f49696db5895e5cfd61f74475ab5052d7bc51a23d2666d19293b gzip-1.3.5-r10.ebuild 2335
-MISC ChangeLog 11051 RMD160 41687511097741ea8e58fe9993a74fe448458e2b SHA1 ae4459b3a5fb11eac0416b7d55adedf1ee1f3872 SHA256 6b165559c3272fa2061bd96dd64623bd747991a986139258c92379386afc0cae
-MD5 cb021a147031f02ee5f809091de8a5ea ChangeLog 11051
-RMD160 41687511097741ea8e58fe9993a74fe448458e2b ChangeLog 11051
-SHA256 6b165559c3272fa2061bd96dd64623bd747991a986139258c92379386afc0cae ChangeLog 11051
+EBUILD gzip-1.3.5-r10.ebuild 2347 RMD160 4c69be96a4f0af9c3bfc0662c17d3f93914bbb65 SHA1 65e8a7489f214d2640fb4d133c06c116bec11cc9 SHA256 9987a6faa5faf9117c14b68086635c29d3523c8ab3e23f05ba5f2287f622824b
+MD5 7ea8a3c9a1fea9c1ee7882bcb5da56a4 gzip-1.3.5-r10.ebuild 2347
+RMD160 4c69be96a4f0af9c3bfc0662c17d3f93914bbb65 gzip-1.3.5-r10.ebuild 2347
+SHA256 9987a6faa5faf9117c14b68086635c29d3523c8ab3e23f05ba5f2287f622824b gzip-1.3.5-r10.ebuild 2347
+MISC ChangeLog 11155 RMD160 bfadcf67aee9a9a675eb82ec761aefd52e201beb SHA1 e7f5f9d0c2a288d33746cb8ddc2f86d219710022 SHA256 428f707dd71957264d0e7c0765a152b24513be84942015eedfd24d2976e382c7
+MD5 f22454c905aceb5b48d67486acbb6b68 ChangeLog 11155
+RMD160 bfadcf67aee9a9a675eb82ec761aefd52e201beb ChangeLog 11155
+SHA256 428f707dd71957264d0e7c0765a152b24513be84942015eedfd24d2976e382c7 ChangeLog 11155
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 metadata.xml 164
-size 232 files/digest-gzip-1.3.5-r10 232
+MD5 b88cd4d307670111059400e1132d179f files/digest-gzip-1.3.5-r10 232
 RMD160 9ce0351305c191b5400cf658faf4b282dad18b42 files/digest-gzip-1.3.5-r10 232
 SHA256 0bfcc4dcd48430f1951f1452812e9809725069fb910d5234a32d8788ba84fa96 files/digest-gzip-1.3.5-r10 232
-MD5 b88cd4d307670111059400e1132d179f files/digest-gzip-1.3.5-r10 232
