@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/gzip/gzip-1.3.5-r10.ebuild,v 1.1 2006/09/27 14:30:11 taviso Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/gzip/gzip-1.3.5-r10.ebuild,v 1.2 2006/10/17 12:52:28 uberlord Exp $
 
 EAPI="prefix"
 
@@ -47,17 +47,17 @@ src_compile() {
 
 src_install() {
 	dodir /usr/bin /usr/share/man/man1
-	make prefix=${D}/usr \
-		exec_prefix=${D}/ \
-		mandir=${D}/usr/share/man \
-		infodir=${D}/usr/share/info \
+	make prefix=${ED}/usr \
+		exec_prefix=${ED}/ \
+		mandir=${ED}/usr/share/man \
+		infodir=${ED}/usr/share/info \
 		install || die
 
-	cd ${D}/bin
+	cd ${ED}/bin
 
 	for i in gzexe zforce zgrep zmore znew zcmp
 	do
-		sed -i -e "s:${D}::" ${i} || die
+		sed -i -e "s:${ED}::" ${i} || die
 		chmod 755 ${i}
 	done
 
@@ -74,18 +74,18 @@ src_install() {
 
 	if ! use build
 	then
-		cd ${D}/usr/share/man/man1
+		cd ${ED}/usr/share/man/man1
 		rm -f gunzip.* zcmp.* zcat.*
 		ln -s gzip.1.gz gunzip.1.gz
 		ln -s zdiff.1.gz zcmp.1.gz
 		ln -s gzip.1.gz zcat.1.gz
 		ln -s gzip.1.gz gzcat.1.gz
 		cd ${S}
-		rm -rf ${D}/usr/man ${D}/usr/lib
+		rm -rf ${ED}/usr/man ${ED}/usr/lib
 		dodoc ChangeLog NEWS README THANKS TODO
 		docinto txt
 		dodoc algorithm.doc gzip.doc
 	else
-		rm -rf ${D}/usr
+		rm -rf ${ED}/usr
 	fi
 }
