@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/gzip
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/gzip/ChangeLog,v 1.68 2006/09/27 14:30:11 taviso Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/gzip/ChangeLog,v 1.69 2006/10/17 12:52:28 uberlord Exp $
+
+  17 Oct 2006; Roy Marples <uberlord@gentoo.org> gzip-1.3.5-r10.ebuild:
+  Added ~sparc-fbsd keyword.
 
 *gzip-1.3.5-r10 (27 Sep 2006)
 
